#
# Copyright (c) 2023 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#
[workspace]
resolver = "2"
members = ["zenoh-dissector", "epan-sys"]

[workspace.package]
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anyhow = "1.0.89"
convert_case = "0.6.0"
env_logger = "0.11.5"
epan-sys = { path = "epan-sys" }
log = "0.4.22"
zenoh-buffers = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main", version = "1.2.0"}
zenoh-codec = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main", version = "1.2.0"}
zenoh-protocol = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main", version = "1.2.0"}
zenoh-transport = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main", features = [
  "transport_compression",
] , version = "1.2.0" }
