#
# Copyright (c) 2023 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#
[workspace]
resolver = "2"
members = ["zenoh-dissector", "epan-sys"]

[workspace.package]
version = "1.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anyhow = "1.0.97"
convert_case = "0.8.0"
env_logger = "0.11.6"
epan-sys = { path = "epan-sys" }
log = "0.4.26"
zenoh-buffers = { version = "1.2.1", git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main" }
zenoh-codec = { version = "1.2.1", git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main" }
zenoh-protocol = { version = "1.2.1", git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main" }
zenoh-transport = { features = [
  "transport_compression",
], version = "1.2.1", git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main" }
