#
# Copyright (c) 2026 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#
[package]
name = "epan-sys"
version = { workspace = true }
edition = "2021"
license = "MIT OR Apache-2.0"
description = "FFI Bindings to Wireshark's epan module"
links = "wireshark"
keywords = ["wireshark", "ffi"]
categories = ["external-ffi-bindings"]

[build-dependencies]
pkg-config = "0.3.30"
cmake = "0.1.51"
bindgen = { version = "0.72.1", optional = true }
reqwest = { version = "0.12.7", features = ["blocking"] }
anyhow = { workspace = true }
tar = "0.4.41"
xz2 = "0.1.7"
lazy_static = "1.5.0"
cargo_metadata = "0.18"

# Enabling this feature causes us to generate the bindings at build time instead
# of using the pre-generated bindings.rs file.
[features]
bindgen = ["dep:bindgen"]
