[package]
name = "zenoh-codec-ffi"
version = { workspace = true }
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { workspace = true }
convert_case = { workspace = true }
zenoh-buffers = { workspace = true }
zenoh-codec = { workspace = true }
zenoh-protocol = { workspace = true }
zenoh-transport = { workspace = true }

[dev-dependencies]
zenoh-buffers = { workspace = true }
zenoh-codec = { workspace = true }
zenoh-protocol = { workspace = true }
