[package]
name = "zenoh-dissector"
version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
convert_case = { workspace = true }
env_logger = { workspace = true }
epan-sys = { workspace = true }
log = { workspace = true }
zenoh-buffers = { workspace = true }
zenoh-codec = { workspace = true }
zenoh-protocol = { workspace = true }
zenoh-transport = { workspace = true }

[build-dependencies]
cargo_metadata = "0.18"

[lib]
crate-type = ["cdylib"]
